--- a/composer.json
+++ b/composer.json
@@ -2,18 +2,25 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "license": "MIT",
     "require": {
         "php": "^7.4|^8.0",
+        "ext-json": "*",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/fortify": "^1.8",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "stevebauman/location": "^6.2",
-      "ext-json": "*"
+        "livewire/livewire": "^2.8",
+        "overtrue/laravel-follow": "^3.1",
+        "realrashid/sweet-alert": "^4.1",
+        "spatie/laravel-searchable": "^1.10",
+        "stevebauman/location": "^6.2"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
